--- a/sports_predictions/frontend/Dockerfile
+++ b/sports_predictions/frontend/Dockerfile
@@ -8,6 +8,12 @@ RUN npm run build
 
 # Production stage
 FROM nginx:alpine
+
+# Replace default nginx config
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+
+# Copy built frontend
 COPY --from=build /app/dist /usr/share/nginx/html
+
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
