update for caddy

--- a/sports_predictions/frontend/Dockerfile
+++ b/sports_predictions/frontend/Dockerfile
@@ -7,13 +7,11 @@ COPY . .
 RUN npm run build
 
 # Production stage
-FROM nginx:alpine
+FROM caddy:2-alpine
 
 # Replace default nginx config
-COPY nginx.conf /etc/nginx/conf.d/default.conf
-
+COPY Caddyfile /etc/caddy/Caddyfile
 # Copy built frontend
-COPY --from=build /app/dist /usr/share/nginx/html
+COPY --from=build /app/dist /usr/share/caddy
 
 EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
